# GPU-Viewer

./: .gitignore  .travis.yml  .~lock.README.md#  About GPU Viewer  About.py  About_GPU_Viewer  Adapta.tar.xz  Change Log  Change Log.md  GPU viewer  GPUViewer  GPU_Viewer.py  LICENSE  MANIFEST.in  Makefile  Numix.tar.xz  OpenGLViewer.py  OpenGLViewer0.9.py  README.md  _config.yml  gpu-viewer-stable-1.1.deb  gpu-viewer-stable-1.1b.deb  gpu-viewer-stable-1.2.deb  gpu-viewer-stable-1.3.deb  gpu-viewer.desktop  gpu-viewer.in  gpu-viewer_1.6a2-1_amd64.deb  gpu-viewer_1.8b1-1_amd64.deb  gpu-viewer_1.9b1-1_amd64.deb  gtk.css  install  io.github.arunsivaramanneo.GPUViewer.yaml  meson.build  online.winehub.GPUViewer.appdata.xml  online.winehub.GPUViewer.json  online.winehub.GPUViewer.yml  setup.py  vulkanviewer.py
.github/: FUNDING.yml
.github/workflows/: pages.yml
Files/: About.py  COSMIC Aero.ron  Commands.py  Common.py  Const.py  Filenames.py  FrameBuffer.py  Framebuffer.py  GPUViewer.py  GPU_Viewer.py  OpenCL.py  OpenGLViewer.py  SummaryViewer.py  VP_VULKANINFO_AMD_Radeon_RX_6600M_(RADV_NAVI23)_25_2_99.json  VP_VULKANINFO_AMD_Radeon_Vega_8_Graphics_(RADV_RAVEN)_25_2_99.json  VdpauViewer.py  VulkanVideoViewer.py  VulkanViewer.py  aboutPage.py  const.py  gnome-shell.css  gpu_viewer.py  gtk.css  gtk_custom.css  gtk_dark.css  gtk_light.css  gtk_test.css  gtk_test_1.css  vulkan_viewer.py  vulkanviewer.py
GPU-Viewer/: About.py  Common.py  GPUViewer
GPU_Viewer.egg-info/: PKG-INFO
Images/: mesa.png~
data/: io.github.arunsivaramanneo.GPUViewer.desktop  io.github.arunsivaramanneo.GPUViewer.metainfo.xml  meson.build
tests/: test_test.py
