install_data('@0@.desktop'.format(APPLICATION_ID),
  install_dir: get_option('datadir') / 'applications')
install_data('@0@.metainfo.xml'.format(APPLICATION_ID),
  install_dir: get_option('datadir') / 'metainfo')
install_data('../Images/GPU_Viewer.png',
  rename: '@0@.png'.format(APPLICATION_ID),
  install_dir: get_option('datadir') / 'icons/hicolor/512x512/apps')
