install_data('@0@.desktop'.format(APPLICATION_ID),
  install_dir: get_option('datadir') / 'applications')
install_data('@0@.metainfo.xml'.format(APPLICATION_ID),
  install_dir: get_option('datadir') / 'metainfo')
install_data('../Images/GPU_Viewer.png',
  rename: '@0@.png'.format(APPLICATION_ID),
  install_dir: get_option('datadir') / 'icons/hicolor/512x512/apps')
install_data('../Images/Vulkan.png',
  install_dir: get_option('datadir') / 'gpu-viewer/icons/hicolor/512x512/actions')
install_data('../Images/OpenGL.png',
  install_dir: get_option('datadir') / 'gpu-viewer/icons/hicolor/512x512/actions')
install_data('../Images/Egl_logo.png',
  install_dir: get_option('datadir') / 'gpu-viewer/icons/hicolor/512x512/actions')
install_data('../Images/OpenGL_ES.png',
  install_dir: get_option('datadir') / 'gpu-viewer/icons/hicolor/512x512/actions')
install_data('../Images/OpenCL.svg',
  install_dir: get_option('datadir') / 'gpu-viewer/icons/hicolor/512x512/actions')
install_data('../Images/about-us.png',
  install_dir: get_option('datadir') / 'gpu-viewer/icons/hicolor/512x512/actions')
install_data('../Images/vdpauinfo.png',
  install_dir: get_option('datadir') / 'gpu-viewer/icons/hicolor/512x512/actions')
install_data('../Images/settings.png',  
  install_dir: get_option('datadir') / 'gpu-viewer/icons/hicolor/512x512/actions')
install_data('../Images/Vulkan-Video.png',  
  install_dir: get_option('datadir') / 'gpu-viewer/icons/hicolor/512x512/actions')